Fixed CSS spacing issue by reintroducing minheight:100% in main contianer CSS // Incorporated background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@ html, body{
     width: 100%;
     margin:0;
     position: relative;
+    background: url("../images/bg.png");
+
 }
 
 header {
@@ -133,9 +135,9 @@ li a {
 }
 
 section {
-    background-color: #b6b6b6;
+    /* background-color: #b6b6b6; */
     /*background:url('/assets/images/bg.png') no-repeat center top;*/
-    /*min-height: 100%;*/
+    /* min-height: 100%; */
     overflow:hidden;
     width: 100%;
     padding: 30px 0px 30px 0px;
